<resources>
    <string name="app_name">My Application</string>
    <string name="list_devices">List Devices</string>
    <string name="off_bluetooth">Off BLUETOOTH</string>
    <string name="make_visible">Make Visible</string>
    <string name="on_bluetooth">On Bluetooth</string>
    <string name="bluetooth_connection">Bluetooth Control Panel</string>
    <string name="sendMsgPlaceholder">Type message in this box</string>
    <string name="receiveTextLabel">Received text messages will be shown in this box</string>
    <string name="sendBtnText">Send</string>
    <string name="receiveText">Incoming Text Messages</string>
    <string name="title_activity_main_panel">MainPanel</string>
    <string name="main_page">Main Page</string>
    <string name="f1btn">Send F1</string>
    <string name="f2btn">Send F2</string>
    <string name="robot_status">Robot Status:</string>
    <string name="set_waypoint">Set Waypoint</string>
    <string name="set_origin">Set Origin</string>
    <string name="fastest_path">Fastest Path</string>
    <string name="start">Start</string>
    <string name="connected_to_n">Connected to: \n</string>
    <string name="exploration">Exploration</string>
    <string name="set_f1">Set F1</string>
    <string name="scan">Scan</string>
    <string name="close">Close</string>
    <string name="mdf_string_1">MDF String 1</string>
    <string name="mdf_string_2">MDF String 2</string>
    <string name="display_mdf">Display MDF</string>
    <string name="image_strings">Image Strings</string>
    <string name="enter_a_string">Enter a String</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="your_string">\'Your string\'</string>
    <string name="message_history">Message history</string>
    <string name="customisable_string_1">Customisable String 1</string>
    <string name="customisable_string_2">Customisable String 2</string>
    <string name="manual_controls">Manual Controls</string>
    <string name="outgoing_connection_request">Outgoing Connection Request</string>
    <string name="yes">Yes</string>
    <string name="calibrate">Calibrate</string>
</resources>