<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RobotPanelActivity">


    <TextView
        android:id="@+id/F1textBox"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:maxWidth="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setF1btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Set F1"
        app:layout_constraintEnd_toStartOf="@+id/F1btn"
        app:layout_constraintStart_toEndOf="@+id/F1textBox"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/F1btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        android:layout_marginTop="15dp"
        android:text="@string/f1btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/F2textBox"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:maxWidth="120dp"
        app:layout_constraintStart_toStartOf="@+id/F1textBox"
        app:layout_constraintTop_toBottomOf="@+id/F1textBox" />

    <Button
        android:id="@+id/setF2btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set F2"
        app:layout_constraintTop_toBottomOf="@+id/F1btn"
        app:layout_constraintStart_toStartOf="@+id/setF1btn"/>

    <Button
        android:id="@+id/F2btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f2btn"
        app:layout_constraintStart_toStartOf="@+id/F1btn"
        app:layout_constraintTop_toBottomOf="@+id/F1btn"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:text="Fake map"
        app:layout_constraintEnd_toEndOf="@+id/F2btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/F1textBox"
        app:layout_constraintTop_toBottomOf="@+id/F2textBox" />

    <TextView
        android:id="@+id/robotStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/robot_status"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/robotStatusTxtbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:height="20dp"
        android:maxHeight="20dp"
        android:background="@drawable/textview_border"
        app:layout_constraintTop_toBottomOf="@+id/robotStatusLabel"
        app:layout_constraintStart_toStartOf="@+id/robotStatusLabel"
        app:layout_constraintEnd_toEndOf="@+id/robotStatusLabel"/>

    <Button
        android:id="@+id/setOriginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:text="@string/set_origin"
        app:layout_constraintTop_toBottomOf="@+id/robotStatusLabel"
        app:layout_constraintStart_toEndOf="@+id/robotStatusTxtbox"/>

    <Button
        android:id="@+id/setWaypointBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72dp"
        android:text="@string/set_waypoint"
        app:layout_constraintTop_toBottomOf="@+id/robotStatusLabel"
        app:layout_constraintStart_toEndOf="@+id/setOriginBtn"
        app:layout_constraintEnd_toEndOf="@+id/textView2" />

    <Button
        android:id="@+id/fastestPathBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fastest_path"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/robotStatusTxtbox"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/setOriginBtn"
        app:layout_constraintStart_toStartOf="@+id/setOriginBtn"/>

    <TextView
        android:id="@+id/bluetoothConnectionTxtbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:height="45dp"
        android:maxHeight="45dp"
        android:text="@string/connected_to_n"
        app:layout_constraintTop_toBottomOf="@+id/setWaypointBtn"
        app:layout_constraintStart_toStartOf="@+id/setWaypointBtn"
        app:layout_constraintEnd_toEndOf="@+id/setWaypointBtn"/>

    <Button
        android:id="@+id/explorationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exploration"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/fastestPathBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resetMapBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset Map"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/startBtn"
        app:layout_constraintStart_toStartOf="@+id/startBtn"/>


    <Button
        android:id="@+id/imageRecogBtn"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:text="Image\nRecognition"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/startBtn"
        app:layout_constraintStart_toStartOf="@+id/bluetoothConnectionTxtbox" />

    <ImageButton
        android:id="@+id/upBtn"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:srcCompat="@drawable/uparrow"
        android:layout_marginTop="4dp"
        android:layout_marginLeft='102dp'
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/explorationBtn"
        app:layout_constraintStart_toStartOf="@+id/explorationBtn"
        android:background="@null"/>

    <ImageButton
        android:id="@+id/leftBtn"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:srcCompat="@drawable/leftarrow"
        android:layout_marginTop="5dp"
        android:layout_marginLeft='20dp'
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/upBtn"
        app:layout_constraintStart_toStartOf="@+id/explorationBtn"
        android:background="@null"/>

    <ImageButton
        android:id="@+id/rightBtn"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:srcCompat="@drawable/rightarrow"
        android:layout_marginTop="5dp"
        android:layout_marginLeft='78dp'
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/upBtn"
        app:layout_constraintStart_toEndOf="@+id/leftBtn"
        android:background="@null"/>

    <ImageButton
        android:id="@+id/downBtn"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:srcCompat="@drawable/downarrow"
        android:layout_marginTop="5dp"
        android:layout_marginLeft='0dp'
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/leftBtn"
        app:layout_constraintStart_toStartOf="@+id/upBtn"
        android:background="@null"/>

    <ImageButton
        android:id="@+id/micBtn"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:srcCompat="@drawable/microphone"
        android:layout_marginTop="82dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/imageRecogBtn"
        app:layout_constraintStart_toStartOf="@+id/imageRecogBtn"
        android:background="@null"/>


</androidx.constraintlayout.widget.ConstraintLayout>